--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension RPC::Oracle.
 
+1.3 Apr 18 2008
+  - Fixed Makefile.PL dependencies
+
 1.2 Apr 17 2008
   - Fixed test to be CPANTS-compliant
 
